<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">FH Nav</string>
	<string name="app_version">1.3+Aktuelles</string>
	<string name="menu_edit_button">Anpassen</string>
	<string name="menu_navigation_button">Navigation</string>
	<string name="menu_settings_button">Einstellungen</string>
	<string name="menu_empty_list">Keine Veranstaltung</string>
	<string name="wizard_study_course">Studiengang</string>
	<string name="wizard_ok_button">Stundenplan laden</string>
	<string name="wizard_skip_button">Überspringen</string>
	<string name="wizard_alert_title">Herzlich Willkommen</string>
	<string name="wizard_alert_message">Dieser Wizard wird sie durch die erste Einrichtung führen.</string>
	<string name="wizard_alert_positiveButton">Los gehts!</string>
	<string name="wizard_error_title">Verbindungsfehler!</string>
	<string name="wizard_error_positiveButton">Schade</string>
	<string name="progess_dialog_message">Herunterladen des Stundenplans...</string>
	<string name="button_add_label">Hinzufügen</string>
	<string name="button_select_all_label">Alle auswählen</string>
	<string name="button_deselect_all_label">Alle abwählen</string>
	<string name="button_delete_label">Löschen</string>
	<string name="button_back_label">Zurück</string>
	<string name="alert_dialog_connection_problem_title">Verbindungsfehler!</string>
	<string name="alert_dialog_connection_problem_msg">Leider konnte keine Verbindung zum Server hergestellt werden.</string>
	<string name="alert_dialog_connection_problem_msg2">Anderen Serveradresse eingeben:</string>
	<string name="addvorlesung_spinner_text">Studiengang wählen</string>
	<string name="addveranstaltung_toast_text_0">Die Veranstaltung ist bereits im Stundenplan!</string>
	<string name="addveranstaltung_toast_text_1a">Es wurde(n) </string>
	<string name="addveranstaltung_toast_text_1b">Veranstaltung(en) hinzugefügt.</string>
	<string name="calendar_transfer_toast_text_1b">Veranstaltung(en) dem Kalender hinzugefügt.</string>
	<string name="adaptstundenplan_toast_text_1a">Es wurde(n) </string>
	<string name="adaptstundenplan_toast_text_1b">Veranstaltung(en) gelöscht.</string>
	<string name="editmenu_change_view">Ansicht wechseln</string>
	<string name="editmenu_add">Hinzufügen</string>
	<string name="editmenu_delete">Löschen</string>
	<string name="editmenu_commit">In Kalender übertragen...</string>
	<string name="monday">Montag</string>
	<string name="tuesday">Dienstag</string>
	<string name="wednesday">Mittwoch</string>
	<string name="thursday">Donnerstag</string>
	<string name="friday">Freitag</string>
	<string name="saturday">Samstag</string>
	<string name="sunday">Sonntag</string>
	<string name="settings_restart_wizard">Wizard neu starten</string>
	<string name="settings_text_size">Textgröße</string>
	<string name="settings_test_size_0">Klein</string>
	<string name="settings_test_size_1">Mittel</string>
	<string name="settings_test_size_2">Groß</string>
	<string name="settings_lecture_details">Veranstaltungsdetails</string>
	<string name="settings_lecture_details_groupletter">Gruppenbuchstaben</string>
	<string name="settings_lecture_details_lecturer">Dozent</string>
	<string name="settings_lecture_details_type">Typ</string>
	<string name="settings_pathToFile_label">Serveradresse</string>
	<string name="error">Fehler</string>
	<string name="error_calendar">Übertragung fehlgeschlagen. (Vielleicht ist kein Kalendar eingerichtet?)</string>
	<string name="add_hauptmenue_title">Hauptmenü</string>
	<string name="normal_view">Stundenplan</string>
	<string name="agenda_view">Agenda</string>
	<string name="add_vorlesung_title">Veranstaltung hinzufügen</string>
	<string name="add_adaptstundenplan_title">Veranstaltung löschen</string>
	<string name="add_settings_title">Einstellungen</string>
	<string name="add_wizard_title">Wizard</string>
	<string name="menu_extras_button">Extras</string>
	<string name="extras_title">Extras</string>
	<string name="extras_button1a">Infos</string>
	<string name="extras_button1b">Speiseplan</string>
	<string name="extras_button2">Navigation</string>
	<string name="extras_button3">Zurück</string>
	<string name="canteenSpezialHeader">Spezialangebote der Woche</string>
	<string name="page_select_header">Bitte wählen</string>
	<string name="page_name_news">Aktuelles</string>
	<string name="page_name_mensa">Mensa</string>
	<string name="page_name_news_W">Aktuelles(Wirtschaft)</string>
	<string name="page_name_mensa_kostbar">Kostbar</string>
	<string name="page_name_pplan">Prüfungsplan</string>
	<string name="page_name_lplan">Lageplan</string>
	<string name="page_name_lplan2">Lageplan (Google Maps)</string>
	<string name="page_name_splan">S1 Fahrplan</string>
	<string name="page_name_bplan">Bus Fahrplan</string>
	<string name="the">der</string>
	<string name="empty_list">Keine Daten vorhanden</string>	
	<string name="empty_list_downloading">Daten werden gerade heruntergeladen...</string>
	<string name="empty_list_downloading_no">Der Speiseplan ist leer oder es muss neu geladen werden.</string>
	<string name="alert_dialog_connection_problem_retry_button">Noch mal</string>
	<string name="alert_dialog_connection_problem_next_button">Überspringen</string>
	<string name="alert_dialog_connection_problem_next_button2">Abbruch</string>
	<string name="addveranstaltung_toast_text_0b">Es wurde nichts ausgewählt!</string>	
	<string name="settings_OK_button">Speichern</string>
	<string name="settings_Back_button">Zurück</string>
	<string name="settings_default_button">Standard</string>	
	<string name="tomorrow">Morgen</string>
	<string name="timetable_menu">Stundenplan anpassen</string>
	<string name="settings_alert_title">Warnung</string>
	<string name="settings_alert_message">Beim Neustart des Wizard wird der aktuelle persönliche Stundenplan gelöscht.</string>
	<string name="settings_alert_positiveButton">Weiter</string>
	<string name="settings_alert_negativeButton">Abbruch</string>
</resources>
