<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="fill_parent" android:layout_width="match_parent" android:background="@drawable/background">

	<TextView android:layout_height="35dip" android:textColor="#FF6000"
		android:text="@string/add_wizard_title" android:layout_weight="0"
		android:paddingTop="5dip" android:paddingLeft="10dip"
		android:background="@drawable/ic_tab_template" android:textSize="20dip"
		android:layout_width="match_parent" />

	<TextView android:id="@+id/TextView01" android:text="@string/wizard_study_course"
		android:layout_height="wrap_content" android:layout_width="wrap_content"
		android:textSize="30dip" android:layout_x="20dip" android:layout_y="140dip"></TextView>

	<Spinner android:id="@+id/Spinner01" android:layout_height="50dip"
		android:layout_width="270dip" android:layout_x="20dip"
		android:layout_y="180dip"></Spinner>

	<Button android:layout_height="60dip" android:layout_width="200dip"
		android:id="@+id/WizardOK" android:text="@string/wizard_ok_button"
		android:layout_x="60dip" android:layout_y="330dip"></Button>
</AbsoluteLayout>
