<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical" android:background="#FFFFFF">
	<LinearLayout android:layout_width="fill_parent" android:background="@drawable/ic_tab_template"
		android:layout_height="40dip" android:orientation="horizontal">
		<TextView android:layout_height="35dip" android:textColor="#FF6000"
			android:text="@string/extras_button1a" android:layout_weight="0"
			android:paddingTop="5dip" android:paddingLeft="10dip"
			 android:textSize="20dip"
			android:layout_width="60dip" />
		<Spinner android:id="@+id/spinner1" android:layout_width="260dip"
			android:layout_height="40dip"></Spinner>
	</LinearLayout>
	<WebView android:id="@+id/webView1" android:layout_width="match_parent"
		android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginLeft="5dip"
		android:background="#FFFFFF"></WebView>



	<LinearLayout android:id="@+id/linearLayout3"
		android:layout_height="wrap_content" android:layout_width="match_parent"
		android:layout_weight="0" android:layout_gravity="bottom">

		<Button android:id="@+id/Button01" android:text="@string/extras_button1b"
			android:drawableTop="@android:drawable/ic_menu_today" android:background="@drawable/android_button"
			android:layout_height="69dip" android:layout_width="50dip"
			android:layout_weight="1" android:layout_gravity="bottom"></Button>
		<Button android:id="@+id/Button02" android:text="@string/extras_button2"
			android:drawableTop="@android:drawable/ic_menu_directions"
			android:background="@drawable/android_button" android:layout_height="69dip"
			android:layout_width="50dip" android:layout_weight="1"
			android:layout_gravity="bottom"></Button>
		<Button android:id="@+id/Button03" android:text="@string/extras_button3"
			android:drawableTop="@android:drawable/ic_menu_revert"
			android:background="@drawable/android_button" android:layout_height="69dip"
			android:layout_width="50dip" android:layout_weight="1"
			android:layout_gravity="bottom"></Button>


	</LinearLayout>

</LinearLayout>